fix text align

--- a/Essay/essaypage.css
+++ b/Essay/essaypage.css
@@ -68,7 +68,7 @@ table {
 th {
   text-align: center;
   background-color: #d9964a;
-  vertical-align: center;
+  vertical-align: middle;
   height: 42px;
   padding-top: 12px;
   padding-bottom: 8px;
